@@ -1,5 +1,5 @@
 '\" t
-.\" Manual page created with latex2man on Sat May 19 15:01:56 DST 2001
+.\" Manual page created with latex2man on Sun May 20 13:31:38 DST 2001
 .\" NOTE: This file is generated, DO NOT EDIT.
 .de Vb
 .ft CW
@@ -10,7 +10,7 @@
 
 .fi
 ..
-.TH "TRIO_REGISTER" "3" "19 May 2001" "libtrio "
+.TH "TRIO_REGISTER" "3" "20 May 2001" "libtrio "
 .SH NAME
 trio_register, 
 trio_unregister 
